--- a/docs/style.css
+++ b/docs/style.css
@@ -29,6 +29,8 @@ p {
     display: inline-block;
     margin-left: 3em;
     margin-right: 3em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     border-top: solid 5px;
     border-bottom: solid 5px;
     padding-left: 2em;
@@ -58,6 +60,7 @@ p {
     text-decoration: none;
     border: 4px solid rgb(44, 0, 40);
     border-radius: 1em;
+    box-shadow: 0px 0px 20px 2px black;
 }
 
 .lists {
