--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,5 @@
 table, tr, td {
     border: 2px solid black;
-    border-radius: 10px;
     border-collapse: collapse;
 }
 
@@ -48,6 +47,15 @@ p {
     background-color: rgb(236, 95, 0);
 }
 
+.logo {
+    background-color: rgb(51, 51, 51);
+    padding: 20px 20px 20px 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    width: 17.5%;
+}
+
 .return {
     font-family: Arial, Helvetica, sans-serif;
     left: 10px; 
@@ -91,6 +99,21 @@ p {
 
 .footer a:visited {
     color: rgb(219, 41, 255);
+}
+
+.header {
+    border-left: 5px solid black;
+    border-bottom: 5px solid black;
+    border-right: 5px solid black;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
+    width: 30%;
+    z-index: 5;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    background-color: purple;
+    box-shadow: 0px 0px 20px black;
 }
 
 
