--- a/docs/completed/beginner/carmelojumpballsub/style.css
+++ b/docs/completed/beginner/carmelojumpballsub/style.css
@@ -1,11 +1,31 @@
-.logo {
-    width: 10cm;
-}   
 
 .container {
-    position: absolute;
-    width: 100%;
-    margin: auto;
+    position: relative;
+    width: 29cm;
+    margin:auto;
     border: 0.5cm red solid;
-    height: 75%;
+    height: 11cm;
+}
+
+.trampoline {
+    position: absolute;
+    width: 10cm;
+    top: 10px;
+    left: 10px;
+}
+
+.hoop {
+    position: absolute;
+    width: 14cm ;
+    bottom: -174px ;
+    right: -12px;
+}
+
+#ball {
+    position :absolute ; 
+    z-index: 5;
+}
+
+#fire {
+    position: absolute ;
 }
